# jadlog

./: .coveragerc  .travis.yml  README.md  jadlog.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
contrib/: env-sample  env_gen.py
jadlog/: calcula.py  jadlog.py  pedido.py
tests/: test_consulta.py  test_peso_cubagem.py  test_peso_real.py  test_valor_frete.py
tests/.pytest_cache/v/cache/: nodeids
tests/mocks/: pedido-eventos-mock.json
